--- a/Release/Makefile
+++ b/Release/Makefile
@@ -51,14 +51,17 @@ SUBDIRS :=  \
 ../lib/bmp085 \
 ../lib/dht \
 ../lib/i2c_gps \
-../lib/i2chw
+../lib/i2chw \
+../cad
 
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
-../lcdmixed.c \
+../usart-lib-tes.c \
 ../lib/adc/adc.c \
-../lib/lcd_aligned/lcd_lib.c
+../lib/i2c_master/I2C_master.c \
+../lib/lcd_mixed/lcd_mixed.c \
+../lib/usart_ex4/usart_lib.c
 
 
 PREPROCESSING_SRCS += 
@@ -68,28 +71,36 @@ ASM_SRCS +=
 
 
 OBJS +=  \
-lcdmixed.o \
+usart-lib-tes.o \
 lib/adc/adc.o \
-lib/lcd_aligned/lcd_lib.o
+lib/i2c_master/I2C_master.o \
+lib/lcd_mixed/lcd_mixed.o \
+lib/usart_ex4/usart_lib.o
 
 OBJS_AS_ARGS +=  \
-lcdmixed.o \
+usart-lib-tes.o \
 lib/adc/adc.o \
-lib/lcd_aligned/lcd_lib.o
+lib/i2c_master/I2C_master.o \
+lib/lcd_mixed/lcd_mixed.o \
+lib/usart_ex4/usart_lib.o
 
 C_DEPS +=  \
-lcdmixed.d \
+usart-lib-tes.d \
 lib/adc/adc.d \
-lib/lcd_aligned/lcd_lib.d
+lib/i2c_master/I2C_master.d \
+lib/lcd_mixed/lcd_mixed.d \
+lib/usart_ex4/usart_lib.d
 
 C_DEPS_AS_ARGS +=  \
-lcdmixed.d \
+usart-lib-tes.d \
 lib/adc/adc.d \
-lib/lcd_aligned/lcd_lib.d
+lib/i2c_master/I2C_master.d \
+lib/lcd_mixed/lcd_mixed.d \
+lib/usart_ex4/usart_lib.d
 
-OUTPUT_FILE_PATH +=EX4\ AVR\ LIBRARY.elf
+OUTPUT_FILE_PATH +=EX4\ AVR\ GCC\ LIBRARY.elf
 
-OUTPUT_FILE_PATH_AS_ARGS +="EX4 AVR LIBRARY.elf"
+OUTPUT_FILE_PATH_AS_ARGS +="EX4 AVR GCC LIBRARY.elf"
 
 ADDITIONAL_DEPENDENCIES:=
 
@@ -98,7 +109,7 @@ OUTPUT_FILE_DEP:= ./makedep.mk
 LIB_DEP+= 
 
 # AVR32/GNU C Compiler
-./lcdmixed.o: .././lcdmixed.c
+./usart-lib-tes.o: .././usart-lib-tes.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 3.4.4
 	$(QUOTE)C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL -DNDEBUG  -Os -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -Wall -mmcu=atmega32 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<"
@@ -112,7 +123,21 @@ lib/adc/adc.o: ../lib/adc/adc.c
 	@echo Finished building: $<
 	
 
-lib/lcd_aligned/lcd_lib.o: ../lib/lcd_aligned/lcd_lib.c
+lib/i2c_master/I2C_master.o: ../lib/i2c_master/I2C_master.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 3.4.4
+	$(QUOTE)C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL -DNDEBUG  -Os -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -Wall -mmcu=atmega32 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<"
+	@echo Finished building: $<
+	
+
+lib/lcd_mixed/lcd_mixed.o: ../lib/lcd_mixed/lcd_mixed.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 3.4.4
+	$(QUOTE)C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL -DNDEBUG  -Os -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -Wall -mmcu=atmega32 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<"
+	@echo Finished building: $<
+	
+
+lib/usart_ex4/usart_lib.o: ../lib/usart_ex4/usart_lib.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 3.4.4
 	$(QUOTE)C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL -DNDEBUG  -Os -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -Wall -mmcu=atmega32 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<"
@@ -134,7 +159,21 @@ lib/adc/%.o: ../lib/adc/%.c
 	@echo Finished building: $<
 	
 
-lib/lcd_aligned/%.o: ../lib/lcd_aligned/%.c
+lib/i2c_master/%.o: ../lib/i2c_master/%.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 3.4.4
+	$(QUOTE)C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL -DNDEBUG  -Os -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -Wall -mmcu=atmega32 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<"
+	@echo Finished building: $<
+	
+
+lib/lcd_mixed/%.o: ../lib/lcd_mixed/%.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 3.4.4
+	$(QUOTE)C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL -DNDEBUG  -Os -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -Wall -mmcu=atmega32 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<"
+	@echo Finished building: $<
+	
+
+lib/usart_ex4/%.o: ../lib/usart_ex4/%.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 3.4.4
 	$(QUOTE)C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL -DNDEBUG  -Os -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -Wall -mmcu=atmega32 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<"
@@ -166,13 +205,13 @@ all: $(OUTPUT_FILE_PATH) $(ADDITIONAL_DEPENDENCIES)
 $(OUTPUT_FILE_PATH): $(OBJS) $(USER_OBJS) $(OUTPUT_FILE_DEP) $(LIB_DEP)
 	@echo Building target: $@
 	@echo Invoking: AVR/GNU Linker : 3.4.4
-	$(QUOTE)C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="EX4 AVR LIBRARY.map" -Wl,--start-group -Wl,-lm  -Wl,--end-group -Wl,--gc-sections -mmcu=atmega32 
+	$(QUOTE)C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="EX4 AVR GCC LIBRARY.map" -Wl,--start-group -Wl,-lm  -Wl,--end-group -Wl,--gc-sections -mmcu=atmega32 
 	@echo Finished building target: $@
-	"C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O ihex -R .eeprom -R .fuse -R .lock -R .signature  "EX4 AVR LIBRARY.elf" "EX4 AVR LIBRARY.hex"
-	"C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-objcopy.exe" -j .eeprom  --set-section-flags=.eeprom=alloc,load --change-section-lma .eeprom=0  --no-change-warnings -O ihex "EX4 AVR LIBRARY.elf" "EX4 AVR LIBRARY.eep" || exit 0
-	"C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-objdump.exe" -h -S "EX4 AVR LIBRARY.elf" > "EX4 AVR LIBRARY.lss"
-	"C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O srec -R .eeprom -R .fuse -R .lock -R .signature  "EX4 AVR LIBRARY.elf" "EX4 AVR LIBRARY.srec"
-	"C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-size.exe" "EX4 AVR LIBRARY.elf"
+	"C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O ihex -R .eeprom -R .fuse -R .lock -R .signature  "EX4 AVR GCC LIBRARY.elf" "EX4 AVR GCC LIBRARY.hex"
+	"C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-objcopy.exe" -j .eeprom  --set-section-flags=.eeprom=alloc,load --change-section-lma .eeprom=0  --no-change-warnings -O ihex "EX4 AVR GCC LIBRARY.elf" "EX4 AVR GCC LIBRARY.eep" || exit 0
+	"C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-objdump.exe" -h -S "EX4 AVR GCC LIBRARY.elf" > "EX4 AVR GCC LIBRARY.lss"
+	"C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O srec -R .eeprom -R .fuse -R .lock -R .signature  "EX4 AVR GCC LIBRARY.elf" "EX4 AVR GCC LIBRARY.srec"
+	"C:\Program Files\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1056\avr8-gnu-toolchain\bin\avr-size.exe" "EX4 AVR GCC LIBRARY.elf"
 	
 	
 
@@ -184,5 +223,5 @@ $(OUTPUT_FILE_PATH): $(OBJS) $(USER_OBJS) $(OUTPUT_FILE_DEP) $(LIB_DEP)
 clean:
 	-$(RM) $(OBJS_AS_ARGS) $(EXECUTABLES)  
 	-$(RM) $(C_DEPS_AS_ARGS)   
-	rm -rf "EX4 AVR LIBRARY.elf" "EX4 AVR LIBRARY.a" "EX4 AVR LIBRARY.hex" "EX4 AVR LIBRARY.lss" "EX4 AVR LIBRARY.eep" "EX4 AVR LIBRARY.map" "EX4 AVR LIBRARY.srec"
+	rm -rf "EX4 AVR GCC LIBRARY.elf" "EX4 AVR GCC LIBRARY.a" "EX4 AVR GCC LIBRARY.hex" "EX4 AVR GCC LIBRARY.lss" "EX4 AVR GCC LIBRARY.eep" "EX4 AVR GCC LIBRARY.map" "EX4 AVR GCC LIBRARY.srec"
 	
